--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Shopping List</title>
+    <title>SnickarNils</title>
     <meta name="theme-color" content="#000000" />
     <base href="/" />
     <link rel="stylesheet"
@@ -20,7 +20,6 @@
 </head>
 
 <body>
-    <div id="modal"></div>
     <div id="root">
         <app>Loading...</app>
     </div>
