--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -17,6 +17,7 @@
           crossorigin="anonymous">
     <link rel="stylesheet"
           href="css/app.css" />
+    <link href="Client.styles.css" rel="stylesheet">
 </head>
 
 <body>
