--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <div id="root">
-        <app><i class="fas fa-circle-notch fa-spin fa-lg" style="margin:1rem;"></i></app>
+        <app><i class="fas fa-circle-notch fa-spin fa-lg" style="margin:1rem 0.85rem;"></i></app>
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
