Show placeholder cards while loading

--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet"
           href="css/app.css" />
     <link href="Client.styles.css" rel="stylesheet">
+    <link href="css/loading-skeleton.css" rel="stylesheet" />
 </head>
 
 <body>
