--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -7,6 +7,14 @@
     <title>SnickarNils</title>
     <meta name="theme-color" content="#000000" />
     <base href="/" />
+
+    <!-- FAVICONS -->
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=1">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=1">
+    <link rel="shortcut icon" href="favicon.ico?v=1">
+    <link rel="manifest" href="site.webmanifest?v=1">
+
     <link rel="stylesheet"
           href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
           integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
