Move favicons to sub folder

--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -9,11 +9,11 @@
     <base href="/" />
 
     <!-- FAVICONS -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=1">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=1">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=1">
-    <link rel="shortcut icon" href="favicon.ico?v=1">
-    <link rel="manifest" href="site.webmanifest?v=1">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png?v=1">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png?v=1">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png?v=1">
+    <link rel="shortcut icon" href="favicon/favicon.ico?v=1">
+    <link rel="manifest" href="favicon/site.webmanifest?v=1">
 
     <link rel="stylesheet"
           href="https://use.fontawesome.com/releases/v5.4.1/css/all.css"
